--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Escobar</title>
+	<style>
+		html { 
+			background: url(assets/images/escobar.jpg) no-repeat center center fixed; 
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			-o-background-size: cover;
+			background-size: cover;
+		}
+	</style>
+</head>
 <body>
-	<h1>Boom.</h1>
+
 </body>
 </html>
