--- a/projects/fantasy/index.html
+++ b/projects/fantasy/index.html
@@ -16,9 +16,11 @@
       float: left;
       margin: 0;
       padding: 0;
-      width: 50%;
+      width: 100%;
     }
-
+    @media screen and (min-width: 720px) {
+      picture{width: 50%; }
+    }
   </style>
 </head>
 <body>
