Most points update

--- a/projects/fantasy/index.html
+++ b/projects/fantasy/index.html
@@ -36,6 +36,10 @@
     <source type="image/svg+xml" srcset="assets/svg/8-recordplayer.svg">
     <img src="assets/png/8-recordplayer.png" alt="Record Player">
 </picture>
+<picture>
+    <source type="image/svg+xml" srcset="assets/svg/16-mostpoints-straight.svg">
+    <img src="assets/png/16-mostpoints-straight.png" alt="Most Points Straight">
+</picture>
 
 </body>
 </html>
