--- a/projects/fantasy/index.html
+++ b/projects/fantasy/index.html
@@ -25,6 +25,10 @@
 </head>
 <body>
 <picture>
+    <source type="image/svg+xml" srcset="assets/svg/1-fistbump.svg">
+    <img src="assets/png/1-fistbump.png" alt="Fistbump">
+</picture>
+<picture>
     <source type="image/svg+xml" srcset="assets/svg/3-sadtrophy.svg">
     <img src="assets/png/3-sadtrophy.png" alt="Sad Trophy">
 </picture>
