--- a/projects/fantasy/index.html
+++ b/projects/fantasy/index.html
@@ -41,9 +41,14 @@
     <img src="assets/png/8-recordplayer.png" alt="Record Player">
 </picture>
 <picture>
+    <source type="image/svg+xml" srcset="assets/svg/12-hockey.svg">
+    <img src="assets/png/12-hockey.png" alt="Most Points Straight">
+</picture>
+<picture>
     <source type="image/svg+xml" srcset="assets/svg/16-mostpoints-straight.svg">
     <img src="assets/png/16-mostpoints-straight.png" alt="Most Points Straight">
 </picture>
+
 
 </body>
 </html>
