Updated .pngs and added Football

--- a/projects/fantasy/index.html
+++ b/projects/fantasy/index.html
@@ -42,7 +42,11 @@
 </picture>
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/12-hockey.svg">
-    <img src="assets/png/12-hockey.png" alt="Most Points Straight">
+    <img src="assets/png/12-hockey.png" alt="Hockey">
+</picture>
+<picture>
+    <source type="image/svg+xml" srcset="assets/svg/13-football.svg">
+    <img src="assets/png/13-football.png" alt="Football">
 </picture>
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/16-mostpoints-straight.svg">
