--- a/projects/fantasy/index.html
+++ b/projects/fantasy/index.html
@@ -49,6 +49,10 @@
     <img src="assets/png/13-football.png" alt="Football">
 </picture>
 <picture>
+    <source type="image/svg+xml" srcset="assets/svg/15-basketball.svg">
+    <img src="assets/png/15-basketball.png" alt="Basketball">
+</picture>
+<picture>
     <source type="image/svg+xml" srcset="assets/svg/16-mostpoints-straight.svg">
     <img src="assets/png/16-mostpoints-straight.png" alt="Most Points Straight">
 </picture>
