Added Baseball and Number ONE

--- a/projects/fantasy/index.html
+++ b/projects/fantasy/index.html
@@ -41,12 +41,20 @@
     <img src="assets/png/8-recordplayer.png" alt="Record Player">
 </picture>
 <picture>
+    <source type="image/svg+xml" srcset="assets/svg/9-numberONE.svg">
+    <img src="assets/png/9-numberONE.png" alt="Number ONE">
+</picture>
+<picture>
     <source type="image/svg+xml" srcset="assets/svg/12-hockey.svg">
     <img src="assets/png/12-hockey.png" alt="Hockey">
 </picture>
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/13-football.svg">
     <img src="assets/png/13-football.png" alt="Football">
+</picture>
+<picture>
+    <source type="image/svg+xml" srcset="assets/svg/14-baseball.svg">
+    <img src="assets/png/14-baseball.png" alt="Baseball">
 </picture>
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/15-basketball.svg">
