--- a/projects/fantasy/index.html
+++ b/projects/fantasy/index.html
@@ -45,6 +45,10 @@
     <img src="assets/png/9-numberONE.png" alt="Number ONE">
 </picture>
 <picture>
+    <source type="image/svg+xml" srcset="assets/svg/10-numberTWO.svg">
+    <img src="assets/png/10-numberTWO.png" alt="Number TWO">
+</picture>
+<picture>
     <source type="image/svg+xml" srcset="assets/svg/12-hockey.svg">
     <img src="assets/png/12-hockey.png" alt="Hockey">
 </picture>
