Added Number Three

--- a/projects/fantasy/index.html
+++ b/projects/fantasy/index.html
@@ -49,6 +49,11 @@
     <img src="assets/png/10-numberTWO.png" alt="Number TWO">
 </picture>
 <picture>
+    <source type="image/svg+xml" srcset="assets/svg/11-numberTHREE.svg">
+    <img src="assets/png/11-numberTHREE.png" alt="Number THREE">
+</picture>
+
+<picture>
     <source type="image/svg+xml" srcset="assets/svg/12-hockey.svg">
     <img src="assets/png/12-hockey.png" alt="Hockey">
 </picture>
