--- a/projects/fantasy/index.html
+++ b/projects/fantasy/index.html
@@ -37,6 +37,10 @@
     <img src="assets/png/5-points.png" alt="Points">
 </picture>
 <picture>
+    <source type="image/svg+xml" srcset="assets/svg/6-bench.svg">
+    <img src="assets/png/6-bench.png" alt="Bench">
+</picture>
+<picture>
     <source type="image/svg+xml" srcset="assets/svg/8-recordplayer.svg">
     <img src="assets/png/8-recordplayer.png" alt="Record Player">
 </picture>
