--- a/projects/fantasy/index.html
+++ b/projects/fantasy/index.html
@@ -29,6 +29,10 @@
     <img src="assets/png/1-fistbump.png" alt="Fistbump">
 </picture>
 <picture>
+    <source type="image/svg+xml" srcset="assets/svg/2-hotstreak.svg">
+    <img src="assets/png/2-hotstreak.png" alt="Hot Streak">
+</picture>
+<picture>
     <source type="image/svg+xml" srcset="assets/svg/3-sadtrophy.svg">
     <img src="assets/png/3-sadtrophy.png" alt="Sad Trophy">
 </picture>
