--- a/projects/fantasy/index.html
+++ b/projects/fantasy/index.html
@@ -37,6 +37,10 @@
     <img src="assets/png/3-sadtrophy.png" alt="Sad Trophy">
 </picture>
 <picture>
+    <source type="image/svg+xml" srcset="assets/svg/4-walkoff.svg">
+    <img src="assets/png/4-walkoff.png" alt="Walk Off">
+</picture>
+<picture>
     <source type="image/svg+xml" srcset="assets/svg/5-points.svg">
     <img src="assets/png/5-points.png" alt="Points">
 </picture>
