Added Homerun placeholder

--- a/projects/fantasy/index.html
+++ b/projects/fantasy/index.html
@@ -49,6 +49,10 @@
     <img src="assets/png/6-bench.png" alt="Bench">
 </picture>
 <picture>
+    <source type="image/svg+xml" srcset="assets/svg/7-homerun.svg">
+    <img src="assets/png/7-homerun.png" alt="Bench">
+</picture>
+<picture>
     <source type="image/svg+xml" srcset="assets/svg/8-recordplayer.svg">
     <img src="assets/png/8-recordplayer.png" alt="Record Player">
 </picture>
