--- a/projects/fantasy/index.html
+++ b/projects/fantasy/index.html
@@ -50,7 +50,7 @@
 </picture>
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/7-homerun.svg">
-    <img src="assets/png/7-homerun.png" alt="Bench">
+    <img src="assets/png/7-homerun.png" alt="Homerun">
 </picture>
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/8-recordplayer.svg">
