Added polypill for <picture>

--- a/projects/fantasy/index.html
+++ b/projects/fantasy/index.html
@@ -22,6 +22,7 @@
       picture{width: 50%; }
     }
   </style>
+  <script src="assets/js/picturefill.min.js" async></script>
 </head>
 <body>
 <picture>
