Added Clip Path's to all animations

--- a/projects/fantasy/index.html
+++ b/projects/fantasy/index.html
@@ -25,73 +25,101 @@
   <script src="assets/js/picturefill.min.js" async></script>
 </head>
 <body>
-<picture>
+<a href="assets/svg/1-fistbump.svg">
+  <picture>
     <source type="image/svg+xml" srcset="assets/svg/1-fistbump.svg">
     <img src="assets/png/1-fistbump.png" alt="Fistbump">
-</picture>
-<picture>
+  </picture>
+</a>
+<a href="assets/svg/2-hotstreak.svg">
+  <picture>
     <source type="image/svg+xml" srcset="assets/svg/2-hotstreak.svg">
     <img src="assets/png/2-hotstreak.png" alt="Hot Streak">
-</picture>
+  </picture>
+</a>
+<a href="assets/svg/3-sadtrophy.svg">
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/3-sadtrophy.svg">
     <img src="assets/png/3-sadtrophy.png" alt="Sad Trophy">
 </picture>
+</a>
+<a href="assets/svg/4-walkoff.svg">
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/4-walkoff.svg">
     <img src="assets/png/4-walkoff.png" alt="Walk Off">
 </picture>
+</a>
+<a href="assets/svg/5-points.svg">
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/5-points.svg">
     <img src="assets/png/5-points.png" alt="Points">
 </picture>
+</a>
+<a href="assets/svg/6-bench.svg">
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/6-bench.svg">
     <img src="assets/png/6-bench.png" alt="Bench">
 </picture>
+</a>
+<a href="assets/svg/7-homerun.svg">
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/7-homerun.svg">
     <img src="assets/png/7-homerun.png" alt="Homerun">
 </picture>
+</a>
+<a href="assets/svg/8-recordplayer.svg">
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/8-recordplayer.svg">
     <img src="assets/png/8-recordplayer.png" alt="Record Player">
 </picture>
+</a>
+<a href="assets/svg/9-numberONE.svg">
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/9-numberONE.svg">
     <img src="assets/png/9-numberONE.png" alt="Number ONE">
 </picture>
+</a>
+<a href="assets/svg/10-numberTWO.svg">
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/10-numberTWO.svg">
     <img src="assets/png/10-numberTWO.png" alt="Number TWO">
 </picture>
+</a>
+<a href="assets/svg/11-numberTHREE.svg">
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/11-numberTHREE.svg">
     <img src="assets/png/11-numberTHREE.png" alt="Number THREE">
 </picture>
-
+</a>
+<a href="assets/svg/12-hockey.svg">
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/12-hockey.svg">
     <img src="assets/png/12-hockey.png" alt="Hockey">
 </picture>
+</a>
+<a href="assets/svg/13-football.svg">
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/13-football.svg">
     <img src="assets/png/13-football.png" alt="Football">
 </picture>
+</a>
+<a href="assets/svg/14-baseball.svg">
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/14-baseball.svg">
     <img src="assets/png/14-baseball.png" alt="Baseball">
 </picture>
+</a>
+<a href="assets/svg/15-basketball.svg">
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/15-basketball.svg">
     <img src="assets/png/15-basketball.png" alt="Basketball">
 </picture>
+</a>
+<a href="assets/svg/16-mostpoints-straight.svg">
 <picture>
     <source type="image/svg+xml" srcset="assets/svg/16-mostpoints-straight.svg">
     <img src="assets/png/16-mostpoints-straight.png" alt="Most Points Straight">
 </picture>
-
-
-
+</a>
 </body>
 </html>
