--- a/projects/fantasy/index.html
+++ b/projects/fantasy/index.html
@@ -11,115 +11,228 @@
       margin: 0;
       padding: 0;
     }
-    picture{
+    img{
+      width: 100%;
+    }
+    .animation{
       display: block;
       float: left;
       margin: 0;
       padding: 0;
       width: 100%;
     }
+    .icon{
+      background: white;
+      display: block;
+      float: left;
+      margin: 0;
+      padding: 0;
+      width: 25%;
+    }
     @media screen and (min-width: 1080px) {
-      picture{width: 50%; }
+      .animation{width: 50%; }
+      .icon{width: 12.5%; }
     }
   </style>
   <script src="assets/js/picturefill.min.js" async></script>
 </head>
 <body>
-<a href="assets/svg/1-fistbump.svg">
-  <picture>
-    <source type="image/svg+xml" srcset="assets/svg/1-fistbump.svg">
-    <img src="assets/png/1-fistbump.png" alt="Fistbump">
+<div id="icons">
+
+<a href="assets/svg/icons/1-fistbump.svg">
+  <picture class="icon">
+    <source type="image/svg+xml" srcset="assets/svg/icons/1-fistbump.svg">
+    <img src="assets/png/icons/1-fistbump.png" alt="Fistbump">
   </picture>
 </a>
-<a href="assets/svg/2-hotstreak.svg">
-  <picture>
-    <source type="image/svg+xml" srcset="assets/svg/2-hotstreak.svg">
-    <img src="assets/png/2-hotstreak.png" alt="Hot Streak">
+<a href="assets/svg/icons/2-hotstreak.svg">
+  <picture class="icon">
+    <source type="image/svg+xml" srcset="assets/svg/icons/2-hotstreak.svg">
+    <img src="assets/png/icons/2-hotstreak.png" alt="Hot Streak">
   </picture>
 </a>
-<a href="assets/svg/3-sadtrophy.svg">
-<picture>
-    <source type="image/svg+xml" srcset="assets/svg/3-sadtrophy.svg">
-    <img src="assets/png/3-sadtrophy.png" alt="Sad Trophy">
+<a href="assets/svg/icons/3-sadtrophy.svg">
+<picture class="icon">
+    <source type="image/svg+xml" srcset="assets/svg/icons/3-sadtrophy.svg">
+    <img src="assets/png/icons/3-sadtrophy.png" alt="Sad Trophy">
 </picture>
 </a>
-<a href="assets/svg/4-walkoff.svg">
-<picture>
-    <source type="image/svg+xml" srcset="assets/svg/4-walkoff.svg">
-    <img src="assets/png/4-walkoff.png" alt="Walk Off">
+<a href="assets/svg/icons/4-walkoff.svg">
+<picture class="icon">
+    <source type="image/svg+xml" srcset="assets/svg/icons/4-walkoff.svg">
+    <img src="assets/png/icons/4-walkoff.png" alt="Walk Off">
 </picture>
 </a>
-<a href="assets/svg/5-points.svg">
-<picture>
-    <source type="image/svg+xml" srcset="assets/svg/5-points.svg">
-    <img src="assets/png/5-points.png" alt="Points">
+<a href="assets/svg/icons/5-points.svg">
+<picture class="icon">
+    <source type="image/svg+xml" srcset="assets/svg/icons/5-points.svg">
+    <img src="assets/png/icons/5-points.png" alt="Points">
 </picture>
 </a>
-<a href="assets/svg/6-bench.svg">
-<picture>
-    <source type="image/svg+xml" srcset="assets/svg/6-bench.svg">
-    <img src="assets/png/6-bench.png" alt="Bench">
+<a href="assets/svg/icons/6-bench.svg">
+<picture class="icon">
+    <source type="image/svg+xml" srcset="assets/svg/icons/6-bench.svg">
+    <img src="assets/png/icons/6-bench.png" alt="Bench">
 </picture>
 </a>
-<a href="assets/svg/7-homerun.svg">
-<picture>
-    <source type="image/svg+xml" srcset="assets/svg/7-homerun.svg">
-    <img src="assets/png/7-homerun.png" alt="Homerun">
+<a href="assets/svg/icons/7-homerun.svg">
+<picture class="icon">
+    <source type="image/svg+xml" srcset="assets/svg/icons/7-homerun.svg">
+    <img src="assets/png/icons/7-homerun.png" alt="Homerun">
 </picture>
 </a>
-<a href="assets/svg/8-recordplayer.svg">
-<picture>
-    <source type="image/svg+xml" srcset="assets/svg/8-recordplayer.svg">
-    <img src="assets/png/8-recordplayer.png" alt="Record Player">
+<a href="assets/svg/icons/8-recordplayer.svg">
+<picture class="icon">
+    <source type="image/svg+xml" srcset="assets/svg/icons/8-recordplayer.svg">
+    <img src="assets/png/icons/8-recordplayer.png" alt="Record Player">
 </picture>
 </a>
-<a href="assets/svg/9-numberONE.svg">
-<picture>
-    <source type="image/svg+xml" srcset="assets/svg/9-numberONE.svg">
-    <img src="assets/png/9-numberONE.png" alt="Number ONE">
+<a href="assets/svg/icons/9-numberONE.svg">
+<picture class="icon">
+    <source type="image/svg+xml" srcset="assets/svg/icons/9-numberONE.svg">
+    <img src="assets/png/icons/9-numberONE.png" alt="Number ONE">
 </picture>
 </a>
-<a href="assets/svg/10-numberTWO.svg">
-<picture>
-    <source type="image/svg+xml" srcset="assets/svg/10-numberTWO.svg">
-    <img src="assets/png/10-numberTWO.png" alt="Number TWO">
+<a href="assets/svg/icons/10-numberTWO.svg">
+<picture class="icon">
+    <source type="image/svg+xml" srcset="assets/svg/icons/10-numberTWO.svg">
+    <img src="assets/png/icons/10-numberTWO.png" alt="Number TWO">
 </picture>
 </a>
-<a href="assets/svg/11-numberTHREE.svg">
-<picture>
-    <source type="image/svg+xml" srcset="assets/svg/11-numberTHREE.svg">
-    <img src="assets/png/11-numberTHREE.png" alt="Number THREE">
+<a href="assets/svg/icons/11-numberTHREE.svg">
+<picture class="icon">
+    <source type="image/svg+xml" srcset="assets/svg/icons/11-numberTHREE.svg">
+    <img src="assets/png/icons/11-numberTHREE.png" alt="Number THREE">
 </picture>
 </a>
-<a href="assets/svg/12-hockey.svg">
-<picture>
-    <source type="image/svg+xml" srcset="assets/svg/12-hockey.svg">
-    <img src="assets/png/12-hockey.png" alt="Hockey">
+<a href="assets/svg/icons/12-hockey.svg">
+<picture class="icon">
+    <source type="image/svg+xml" srcset="assets/svg/icons/12-hockey.svg">
+    <img src="assets/png/icons/12-hockey.png" alt="Hockey">
 </picture>
 </a>
-<a href="assets/svg/13-football.svg">
-<picture>
-    <source type="image/svg+xml" srcset="assets/svg/13-football.svg">
-    <img src="assets/png/13-football.png" alt="Football">
+<a href="assets/svg/icons/13-football.svg">
+<picture class="icon">
+    <source type="image/svg+xml" srcset="assets/svg/icons/13-football.svg">
+    <img src="assets/png/icons/13-football.png" alt="Football">
 </picture>
 </a>
-<a href="assets/svg/14-baseball.svg">
-<picture>
-    <source type="image/svg+xml" srcset="assets/svg/14-baseball.svg">
-    <img src="assets/png/14-baseball.png" alt="Baseball">
+<a href="assets/svg/icons/14-baseball.svg">
+<picture class="icon">
+    <source type="image/svg+xml" srcset="assets/svg/icons/14-baseball.svg">
+    <img src="assets/png/icons/14-baseball.png" alt="Baseball">
 </picture>
 </a>
-<a href="assets/svg/15-basketball.svg">
-<picture>
-    <source type="image/svg+xml" srcset="assets/svg/15-basketball.svg">
-    <img src="assets/png/15-basketball.png" alt="Basketball">
+<a href="assets/svg/icons/15-basketball.svg">
+<picture class="icon">
+    <source type="image/svg+xml" srcset="assets/svg/icons/15-basketball.svg">
+    <img src="assets/png/icons/15-basketball.png" alt="Basketball">
 </picture>
 </a>
-<a href="assets/svg/16-mostpoints-straight.svg">
-<picture>
-    <source type="image/svg+xml" srcset="assets/svg/16-mostpoints-straight.svg">
-    <img src="assets/png/16-mostpoints-straight.png" alt="Most Points Straight">
+<a href="assets/svg/icons/16-mostpoints-straight.svg">
+<picture class="icon">
+    <source type="image/svg+xml" srcset="assets/svg/icons/16-mostpoints-straight.svg">
+    <img src="assets/png/icons/16-mostpoints-straight.png" alt="Most Points Straight">
 </picture>
 </a>
+</div>
+<div id="animations">
+<a href="assets/svg/animations/1-fistbump.svg">
+  <picture class="animation">
+    <source type="image/svg+xml" srcset="assets/svg/animations/1-fistbump.svg">
+    <img src="assets/png/animations/1-fistbump.png" alt="Fistbump">
+  </picture>
+</a>
+<a href="assets/svg/animations/2-hotstreak.svg">
+  <picture class="animation">
+    <source type="image/svg+xml" srcset="assets/svg/animations/2-hotstreak.svg">
+    <img src="assets/png/animations/2-hotstreak.png" alt="Hot Streak">
+  </picture>
+</a>
+<a href="assets/svg/animations/3-sadtrophy.svg">
+<picture class="animation">
+    <source type="image/svg+xml" srcset="assets/svg/animations/3-sadtrophy.svg">
+    <img src="assets/png/animations/3-sadtrophy.png" alt="Sad Trophy">
+</picture>
+</a>
+<a href="assets/svg/animations/4-walkoff.svg">
+<picture class="animation">
+    <source type="image/svg+xml" srcset="assets/svg/animations/4-walkoff.svg">
+    <img src="assets/png/animations/4-walkoff.png" alt="Walk Off">
+</picture>
+</a>
+<a href="assets/svg/animations/5-points.svg">
+<picture class="animation">
+    <source type="image/svg+xml" srcset="assets/svg/animations/5-points.svg">
+    <img src="assets/png/animations/5-points.png" alt="Points">
+</picture>
+</a>
+<a href="assets/svg/animations/6-bench.svg">
+<picture class="animation">
+    <source type="image/svg+xml" srcset="assets/svg/animations/6-bench.svg">
+    <img src="assets/png/animations/6-bench.png" alt="Bench">
+</picture>
+</a>
+<a href="assets/svg/animations/7-homerun.svg">
+<picture class="animation">
+    <source type="image/svg+xml" srcset="assets/svg/animations/7-homerun.svg">
+    <img src="assets/png/animations/7-homerun.png" alt="Homerun">
+</picture>
+</a>
+<a href="assets/svg/animations/8-recordplayer.svg">
+<picture class="animation">
+    <source type="image/svg+xml" srcset="assets/svg/animations/8-recordplayer.svg">
+    <img src="assets/png/animations/8-recordplayer.png" alt="Record Player">
+</picture>
+</a>
+<a href="assets/svg/animations/9-numberONE.svg">
+<picture class="animation">
+    <source type="image/svg+xml" srcset="assets/svg/animations/9-numberONE.svg">
+    <img src="assets/png/animations/9-numberONE.png" alt="Number ONE">
+</picture>
+</a>
+<a href="assets/svg/animations/10-numberTWO.svg">
+<picture class="animation">
+    <source type="image/svg+xml" srcset="assets/svg/animations/10-numberTWO.svg">
+    <img src="assets/png/animations/10-numberTWO.png" alt="Number TWO">
+</picture>
+</a>
+<a href="assets/svg/animations/11-numberTHREE.svg">
+<picture class="animation">
+    <source type="image/svg+xml" srcset="assets/svg/animations/11-numberTHREE.svg">
+    <img src="assets/png/animations/11-numberTHREE.png" alt="Number THREE">
+</picture>
+</a>
+<a href="assets/svg/animations/12-hockey.svg">
+<picture class="animation">
+    <source type="image/svg+xml" srcset="assets/svg/animations/12-hockey.svg">
+    <img src="assets/png/animations/12-hockey.png" alt="Hockey">
+</picture>
+</a>
+<a href="assets/svg/animations/13-football.svg">
+<picture class="animation">
+    <source type="image/svg+xml" srcset="assets/svg/animations/13-football.svg">
+    <img src="assets/png/animations/13-football.png" alt="Football">
+</picture>
+</a>
+<a href="assets/svg/animations/14-baseball.svg">
+<picture class="animation">
+    <source type="image/svg+xml" srcset="assets/svg/animations/14-baseball.svg">
+    <img src="assets/png/animations/14-baseball.png" alt="Baseball">
+</picture>
+</a>
+<a href="assets/svg/animations/15-basketball.svg">
+<picture class="animation">
+    <source type="image/svg+xml" srcset="assets/svg/animations/15-basketball.svg">
+    <img src="assets/png/animations/15-basketball.png" alt="Basketball">
+</picture>
+</a>
+<a href="assets/svg/animations/16-mostpoints-straight.svg">
+<picture class="animation">
+    <source type="image/svg+xml" srcset="assets/svg/animations/16-mostpoints-straight.svg">
+    <img src="assets/png/animations/16-mostpoints-straight.png" alt="Most Points Straight">
+</picture>
+</a>
+</div>
 </body>
 </html>
