--- a/projects/styleguide/index.html
+++ b/projects/styleguide/index.html
@@ -2,8 +2,7 @@
 <html itemscope itemtype="http://schema.org/WebPage" lang="en-US">
 <head>
   <meta charset="utf-8">
-  <title>Saving Places
-   | National Trust for Historic Preservation</title>
+  <title>Saving Places</title>
    <meta name="description" content="">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -11,8 +10,6 @@
    <link rel="stylesheet" media="screen" href="assets/css/styleguide.css" />
  </head>
  <body>
-
-
   <nav>
     <ul class="nav">
       <li class="nav__item"><a class="nav__item__link" href="#colors">Colors</a></li>
@@ -67,28 +64,28 @@
     <h2 id="images">Images</h2>
     <figure class="images--ui">
       <figcaption>Hero: 1440px x 800px</figcaption>
-      <img src="https://photos-3.dropbox.com/t/2/AAC_vhVRhlbMdExq4-V_nClYtZk6RxyYIkFlcCIrER4OuA/12/14257048/png/32x32/1/_/1/2/ui_Hero.png/EIPXzAoYjpchIAEgAigC/0OelBreAsQza9KuVVUQ5A_i1gfRQURGWCIFBC7UYlO8?size=1024x768&size_mode=2" />
+      <img src="assets/png/ui_Hero.png" />
     </figure>
     <figure class="images--ui">
       <figcaption>Inline Photo: 1200px x 675px</figcaption>
-      <img src="https://photos-1.dropbox.com/t/2/AADSVWUPqIQIgFPpNYuyxAUBzlCMphvDwQQ-aEgATjpkGQ/12/14257048/png/32x32/1/_/1/2/ui_In-line.png/EIPXzAoYjpchIAEgAigC/59P4qe2PzDSyRpBtlak3dTyKmCzrewZqevIuE45Hlp4?size=1024x768&size_mode=2" />
+      <img src="assets/png/ui_In-line.png" />
     </figure>
     <figure class="images--ui">
       <figcaption>Place: 720px x 510px</figcaption>
-      <img src="https://photos-3.dropbox.com/t/2/AADjSnx9IZzdkAbGdG9-LrumgcgAAc51FqteAJtR23OIkA/12/14257048/png/32x32/1/_/1/2/ui_Similar%20Places.png/EIPXzAoYjpchIAEgAigC/e8nA6T5Y3dv5VMSckNUdBkgnzHPSjly5DfnMKGVN2BE?size=1024x768&size_mode=2" />
+      <img src="assets/png/ui_Similar-Places.png" />
     </figure>
 
     <figure class="images--ui">
       <figcaption>Collection: 350px x 350px</figcaption>
-      <img src="https://photos-6.dropbox.com/t/2/AABmC713MF-W08j-dsELJlhDbzzYAkx3eGakgTRJ0hbeGg/12/14257048/png/32x32/1/_/1/2/ui_Cards.png/EIPXzAoYjpchIAEgAigC/bgWdqmc1NobdpXjMaIZmElmzarqHI5edtEkLbYKAX_4?size=1024x768&size_mode=2" />
+      <img src="assets/png/ui_Cards.png" />
     </figure>
     <figure class="images--ui">
       <figcaption>Story: 400px x 300px</figcaption>
-      <img src="https://photos-3.dropbox.com/t/2/AAAquL_Y6WNMkzHxJPEYnitss0ipJvVOTaP7TWv1S-mOUQ/12/14257048/png/32x32/1/_/1/2/ui_Stories.png/EIPXzAoYjpchIAEgAigC/tu2a6CFESmXXXrSrAt35ldCjmtR-842eiFf9l7m3NSI?size=1024x768&size_mode=2" />
+      <img src="assets/png/ui_Stories.png" />
     </figure>
     <figure class="images--ui">
       <figcaption>Promo: 720px x 510px</figcaption>
-      <img src="https://photos-1.dropbox.com/t/2/AACLhSCaxCZ0XR-ahvG6OEka7eZV4GFqQ4AFg4R8Rq_mUg/12/14257048/png/32x32/1/_/1/2/ui_Promo.png/EIPXzAoYjpchIAEgAigC/QiPbZJFsuPoUWrAeby6UAyALiPq_uVqjrKOE3NTsgZg?size=1024x768&size_mode=2" />
+      <img src="assets/png/ui_Promo.png" />
     </figure>
   </main>
 </body>
