--- a/projects/lebron/charts.html
+++ b/projects/lebron/charts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Points Per Season Charts</title>
 </head>
 <body>
     <svg xmlns="http://www.w3.org/2000/svg">
